Controller and service changes